@@ -19,6 +19,7 @@ my %modules = (
         'IO::File'                  => 0,
 
         'HTML::Mason'               => 0,
+        'HTML::Macro'               => 0,
         'HTML::Template'            => 0,
         'HTML::Template::Compiled'  => 0,
         'HTML::Template::Expr'      => 0,
@@ -28,6 +29,8 @@ my %modules = (
         'Mojo::Template'            => 0,
         'NTS::Template'             => 0,
         'Parse::Template'           => 0,
+        #  Need 0.000000004 for sorted hash-looping.
+        'Solution'                  => '0.000000004',
         'Template::Alloy'           => 0,
         #  Lots of extras here...
         'Template::Sandbox'         => 0,
