@@ -3,6 +3,8 @@ Revision history for Task-Template-Benchmark
 1.00_03 Version released at .  *** Development version. ***
         Version started at  2010-09-15-12:53.
         Added HTML::Mason requirement.
+        Added Solution requirement.
+        Added HTML::Macro requirement.
 
 1.00_02 Version released at 2010-08-15-22:30.  *** Development version. ***
         Version started at  2010-08-15-22:30.
